configuration de la BDD

--- a/blog/.env
+++ b/blog/.env
@@ -15,7 +15,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=ab024dfc2e660f650f66bed37c1d8a04
+APP_SECRET=490e005de0c22efe6b417971e3b72e2a
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
@@ -28,5 +28,5 @@ APP_SECRET=ab024dfc2e660f650f66bed37c1d8a04
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+# DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
